overflow issue of content fix in  hconInfo&quote div

--- a/style.css
+++ b/style.css
@@ -103,25 +103,26 @@ img {
     display: flex;
     flex-direction: column;
     width: auto;
-    height: 500px;
+    /* height: 500px; */
 }
 .SRI{
     color: #1f2937;
     font-size: 36px;
     font-weight:800;
     align-self: center;
-    height: 30%;
+    height: 100px;
     display: flex;
     align-items: center;
 }
 .info{
-    height: 70%;
     padding-left: 10%;
     padding-right: 10%;
 
-    gap:20px;display: flex;
+    display: flex;
+    gap:20px;
     flex-wrap: wrap;
     justify-content: space-evenly;
+    padding-bottom: 100px;
 }
 .info1,.info2,.info3,.info4{
     width: 200px;
@@ -147,9 +148,6 @@ img {
 }
 .quote{
     background-color: #e5e7eb;
-    height: 400px;
-    width: inherit;
-
     display: flex;
 }
 .quote-left,.quote-right{
@@ -158,8 +156,8 @@ img {
 .quote-mid{
     display: flex;
     flex-direction: column;
-    margin-top: auto;
-    margin-bottom: auto;
+    margin-top: 100px;
+    margin-bottom: 100px;
 }
 .quoteText{
     font-size: 36px;
